Fallback code verification

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -28,6 +28,9 @@
         .close {
             font-size: 0.9rem;
         }
+        #email-btn {
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -43,7 +46,7 @@
     <div class="form-group mt-2 mb-2">
         <input class="form-control" id="email-input" placeholder="Input your email"/>
     </div>
-    <button class="btn btn-primary btn-block mb-2" id="email-btn">Next</button>
+    <button class="btn btn-warning btn-block mb-2" id="email-btn">Next</button>
 </div>
 </body>
 <script>
