Change submit button color

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -29,6 +29,8 @@
             font-size: 0.9rem;
         }
         #email-btn {
+            background-color: #cc9933;
+            border: #cc9933;
             color: white;
         }
     </style>
@@ -44,7 +46,7 @@
     <img class="img-fluid m" src="{{@BASE}}/img/post-m.jpg"/>
     <img class="img-fluid l" src="{{@BASE}}/img/post.jpg"/>
     <div class="form-group mt-2 mb-2">
-        <input class="form-control" id="email-input" placeholder="Input your email"/>
+        <input class="form-control" id="email-input" placeholder="Input email"/>
     </div>
     <button class="btn btn-warning btn-block mb-2" id="email-btn">Next</button>
 </div>
