--- a/tpl/invite.html
+++ b/tpl/invite.html
@@ -44,7 +44,8 @@
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-        document.querySelector(".form-control-plaintext").value = getCookie("email");
+        let email = "{{@email}}";
+        document.querySelector(".form-control-plaintext").value = email;
         let btn = document.getElementById("next-btn");
         btn.addEventListener("click", function () {
             let input = document.getElementById("code-input");
@@ -58,7 +59,7 @@
                 headers: {
                     "Content-Type": "application/x-www-form-urlencoded",
                 },
-                body: buildQuery({code: code}),
+                body: buildQuery({email: email, code: code}),
             })
                 .then(function (response) {
                     return response.text();
@@ -66,7 +67,7 @@
                 .then(function (text) {
                     switch (text) {
                         case "success":
-                            location.href = "{{@BASE}}/status";
+                            location.href = "{{@BASE}}/status?email=" + email;
                             break;
                         case "expired":
                             alert("Invitation code expired");
